
Slick 7.x-2.0-dev, 2014-11-05
-----------------------------
Added empty_option to all the Skins options. Now the Skin is optional.
  Skins defined by sub-modules fallback to the Skin defined at the optionset.
  Re-save existing Optionset to disable the skin at all.
Issue #2369129 by bjmiller121: Option for no skin to be loaded.

Slick 7.x-2.0-dev, 2014-10-31
-----------------------------
Removed slick.theme--extra.txt containing unused pure CSS arrows.
Updated and cleaned up gems and Sass files.

Slick 7.x-2.0-dev, 2014-10-30
-----------------------------
Added a new option: initialSlide introduced at Slick 1.3.12
Issue #2305949 by scottalan: Start carousel on specific item

Slick 7.x-2.0-dev, 2014-10-28
-----------------------------
Updated to Slick version 1.3.13:
  Emergency Hotfix for slidesToScroll: 1 and infinite: false (#718)

Updated slick.theme.inc to load fallbacks only if slick items count > 1.
Updated slick.load.js to reflect the latest library fixes:
  - Removed workaround with:
    Responsive breakpoint change removes custom prev / next arrows
    https://github.com/kenwheeler/slick/issues/480

  - Removed workaround with:
    asNavFor thumbnails stopped working with slidesToShow > total slides
    https://github.com/kenwheeler/slick/issues/497

    Leaving a single remaining use with centerMode disable:
      http://jsfiddle.net/o4toq31q/18/

Updated to Slick version 1.3.12.

Slick 7.x-2.0-dev, 2014-10-16
-----------------------------
Fixed for vertical direction on Full screen skin.

Slick 7.x-2.0-dev, 2014-10-15
-----------------------------
Updated slick.colorbox.js to reflect fixes from Slick >= 1.3.11.
Refactored Slick Views.
Added a new basic Full screen skin.
Added a new skin CSS: slick.theme--fullscreen.css

Slick 7.x-2.0-dev, 2014-10-11
-----------------------------
Fixed core library hotfix 1.3.11 which removes pointer-events for Firefox
  draggable issue from all images which in turn makes thumbnails non-clickable